fetch Form data

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,22 @@
 .read-the-docs {
   color: #888;
 }
+
+
+form {
+  width: 250px;
+  margin-right: 10px;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+
+}
+
+/* Style the labels */
+label {
+  display: block;
+  font-size: 14px;
+  font-weight: bold;
+  color: #333;
+}
+
