--- a/src/App.css
+++ b/src/App.css
@@ -42,14 +42,6 @@
 }
 
 
-form {
-  width: 250px;
-  margin-right: 10px;
-  padding: 20px;
-  background-color: #f9f9f9;
-  border-radius: 10px;
-
-}
 
 /* Style the labels */
 label {
@@ -59,3 +51,7 @@ label {
   color: #333;
 }
 
+button{
+  margin-right: 10px;
+  margin-top: 10px;
+}
