--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,15 @@
 #root {
-  max-width: 1280px;
+
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+
+
+/* Optional hover effect */
+.app-logo:hover {
+  transform: scale(1.1);   
 }
 
 @keyframes logo-spin {
@@ -41,6 +35,19 @@
   color: #888;
 }
 
+/* Logo */
+.logo {
+  display: flex;
+  justify-content: center;  
+  align-items: center;      
+  padding: 30px;
+}
+
+.app-logo {
+  width: 100px;            
+  height: auto;             
+  object-fit: contain;      
+}
 
 
 /* Style the labels */
@@ -56,6 +63,7 @@ button{
   margin-top: 10px;
 }
 
+/* Photo Gallery */
 .photo-gallery {
   display: flex;
   flex-wrap: wrap;
@@ -69,3 +77,170 @@ button{
   object-fit: cover;
   border-radius: 5px;
 }
+
+  /* footer */
+  .footer {
+    background-color: #6d6363;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+    width: 100%;
+    position: relative;
+    height: 50px;
+    margin-top: 150px;
+  }
+ 
+
+  footer p {
+    margin-bottom: 10px;
+  }
+
+  /* Booking Form */
+  .booking-form {
+    width: 70%;
+    margin: 20px;
+    padding: 20px;
+    margin-left: 40px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .booking-form label {
+    display: block;
+    margin-bottom: 10px;
+  }
+  
+  .booking-form input {
+    width: 80%;
+    height: 10px;
+    margin-bottom: 3px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  .booking-form button {
+    width: 100%;
+    height: 40px;
+    background-color: #ca6ca6;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .booking-form button:hover {
+    background-color:#c55da2;
+  }
+
+  /* Show all Booking data- click*/
+
+  .booking-data {
+    background-color: rgb(251, 251, 251);
+    padding: 5px;
+    border: 1px solid #ddd;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+
+  .booking-data button {
+    background-color: #c55da2;
+    color: #fff;
+    padding: 5px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .booking-data button:hover {
+    background-color: #b57fb7;
+  }
+
+  /* Login form */
+  .login-form {
+    width: 70%;
+    margin: 20px;
+    padding: 20px;
+    margin-left: 40px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .login-form label {
+    display: block;
+    margin-bottom: 10px;
+  }
+  
+  .login-form input {
+    width: 80%;
+    height: 10px;
+    margin-bottom: 3px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  .login-form button {
+    width: 100%;
+    height: 40px;
+    background-color: #ca6ca6;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .login-form button:hover {
+    background-color:#c55da2;
+  }
+
+  /* Photographer form */
+  .user-form {
+    width: 70%;
+    margin: 20px;
+    padding: 20px;
+    margin-left: 40px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .user-form label {
+    display: block;
+    margin-bottom: 10px;
+  }
+  
+  .user-form input {
+    width: 80%;
+    height: 10px;
+    margin-bottom: 3px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  .user-form button {
+    width: 100%;
+    height: 40px;
+    background-color: #ca6ca6;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .user-form button:hover {
+    background-color:#c55da2;
+  }
+
+  .gallery-btn {
+    background-color: #ca6ca6;
+  }
+
+  .gallery-btn:hover {
+    background-color:#c55da2;
+  }
