--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,5 @@
 :root {
-  body {
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSG9ObyuoJ2VqbCimI00HyVLXbAI2JKQCjU-dWdFu5IVyNbPlqg09JGiZY7TumIW-Vny8g&usqp=CAU);
-    background-size: cover;
-}
+  width: auto;
 
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -29,19 +26,22 @@ a:hover {
 }
 
 body {
+  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSG9ObyuoJ2VqbCimI00HyVLXbAI2JKQCjU-dWdFu5IVyNbPlqg09JGiZY7TumIW-Vny8g&usqp=CAU);
+    background-size: cover;
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  min-width: 1000px;
   min-height: 100vh;
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2.2em;
   line-height: 1.1;
 }
 
 button {
+
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -54,6 +54,7 @@ button {
 }
 button:hover {
   border-color: #646cff;
+
 }
 button:focus,
 button:focus-visible {
